Add new visualization image (test-viz2.png) for enhanced data representation