@@ -44,6 +44,13 @@ libraryDependencies ++= Seq(
   "junit" % "junit" % "4.10" % Test
 )
 
-courseId := "PCO2sYdDEeW0iQ6RUMSWEQ"
+// courseId := "PCO2sYdDEeW0iQ6RUMSWEQ"
 
 Test / parallelExecution := false // So that tests are executed for each milestone, one after the other
+
+// Required for scrimage 2.1.8 (used by Visualization/Interaction) on Java 9+.
+// scrimage uses reflection into sun.nio.ch internals for image output.
+fork := true
+javaOptions ++= Seq(
+  "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED"
+)
